samples/_failures_safe/1761005188_cc00c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d88ec70.c: In function ‘main’:
./samples/SAFE/__tmp_6d88ec70.c:158:13: error: expected expression at end of input
  158 |             a.rows =
      |             ^
./samples/SAFE/__tmp_6d88ec70.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d88ec70.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d88ec70.c:158:13: error: expected declaration or statement at end of input
